src/objects/Package_License_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Package_License_Name__c</fullName>
        <label>Package License Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_License_Type__c</fullName>
        <label>Package License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retain_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retain License</label>
        <type>Checkbox</type>
    </fields>
    <label>Package License Configuration</label>
    <pluralLabel>Package License Configurations</pluralLabel>
</CustomObject>